# SmartSensorWifi

./: AUTHORS  README.md
Arduino/: Doxyfile  Makefile  README.md
Arduino/include/: adc.h  ds1302.h  eep.h  macros.h  serial.h  spi.h  strops.h  timer.h  web.h  wizFi210.h
Arduino/src/: adc.c  ds1302.c  eep.c  interrupts.c  main.c  serial.c  spi.c  strops.c  timer.c  web.c  wizFi210.c
PCB/SmartSensorWifi/: RaspberryShield.b#1  RaspberryShield.b#2  RaspberryShield.b#3  RaspberryShield.b#5  RaspberryShield.b#6  RaspberryShield.b#7  RaspberryShield.b#8  RaspberryShield.brd  RaspberryShield.s#2  RaspberryShield.s#4  RaspberryShield.s#5  RaspberryShield.sch  SmartSensorWifi.b#1  SmartSensorWifi.b#2  SmartSensorWifi.b#3  SmartSensorWifi.b#4  SmartSensorWifi.b#5  SmartSensorWifi.b#6  SmartSensorWifi.b#7  SmartSensorWifi.brd  SmartSensorWifi.s#1  SmartSensorWifi.s#2  SmartSensorWifi.s#3  (+6 more)
Rapport/: Makefile  Rapport.tex  SSWconfigurator.eps  achievements.tex  annexes.tex  capteurs.tex  conclusion.tex  diagramme_tables.eps  intro.tex  polytech.eps  ustl.eps  web.tex
RaspberryPi/: CMakeLists.txt  Doxyfile  README.md
RaspberryPi/include/: SPI.hpp  SPI_MCP3208.hpp
RaspberryPi/src/: SPI.cpp  SPI_MCP3208.cpp  main.cpp
Web/: Readme.txt  add.php  addfield.js  administration.php  connexion.php  dbconnect.php  deconnexion.php  delete.php  footer.php  index.php  nav.php  recup.php  redirect.php  search.php
doc/: CahierDesCharges.md  DiagrammeFonctionnel.dia  SensorATCommands.md  export2pdf.sh  useConfigurator.md
util/: README.md  postJson.sh  pyserialcom.py  req  test.php
(+38 files in other folders)
